# perbert

./: .gitignore  LICENCE.md  README.md  blind.sh  datasets.py  distil.py  embedding.sh  eval-bert-as-linear.sh  eval-blind-again.sh  eval-blind.sh  eval-blindsoft.sh  eval-dropsoft.sh  eval-embedding-distil.sh  eval-normal.sh  eval-original-again.sh  eval-original.sh  eval.sh  github.py  glue.sh  glue_original.py  kmeans-classes.py  main.py  non-resume.sh  normal.sh  package-lock.json  package.json  perbert.py  preproc.py  pyproject.toml  requirements.txt  resume-mlm.sh  resume.sh  richlogger.py  run.py  run_glue.py  run_language_modeling.py  train-again.sh  train-blind-again.sh  train-blind-smaller.sh  train-blind.sh  (+8 more)
.github/workflows/: format.yaml  typecheck.yaml
bert_exp/: __init__.py  __main__.py  bert.py  constants.py  trainer.py
bert_exp/bert/: __init__.py  attention.py  bert.py  block.py  config.py  external.py
bert_exp/conf/: main.yaml
bert_exp/conf/data/: data.yaml
bert_exp/conf/data/dataset/: local.yaml  wikipedia.yaml  wikitext.yaml
bert_exp/conf/loggers/: loggers.yaml
bert_exp/conf/model/: model.yaml
bert_exp/conf/model/lm/: lm.yaml
bert_exp/conf/trainer/: trainer.yaml
bert_exp/data/: __init__.py  datamodules.py
bert_exp/data/datasets/: __init__.py  mappers.py  prepare.py  wrappers.py
bert_exp/models/: init.py  models.py
bert_exp/shaping/: __main__.py  constants.py  data.py  datasets.py  models.py  trainer.py
bert_exp/shaping/conf/: main.yaml
bert_exp/shaping/conf/callbacks/: callbacks.yaml
bert_exp/shaping/conf/data/: data.yaml
bert_exp/shaping/conf/data/dataset/: wikipedia.yaml  wikitext.yaml
bert_exp/shaping/conf/data/lm/: lm.yaml
bert_exp/shaping/conf/model/: model.yaml
bert_exp/shaping/conf/trainer/: trainer.yaml
bert_exp/shaping/data/: __init__.py  datamodules.py  datasets.py
bert_exp/shaping/data/datasets/: __init__.py  mappers.py  prepare.py
bert_exp/shaping/models/: init.py  models.py
conf/: main.yaml
conf/callbacks/: callbacks.yaml
conf/loggers/: loggers.yaml
conf/model/: model.yaml
perbert/: README.md  constants.py  models.py  trainer.py
perbert/conf/: main.yaml
perbert/conf/callbacks/: callbacks.yaml
perbert/conf/data/: data.yaml
perbert/conf/data/dataset/: wikipedia.yaml
perbert/conf/model/: model.yaml
perbert/conf/model/lm/: lm.yaml
perbert/data/: __init__.py  collators.py  datamodules.py
perbert/data/datasets/: __init__.py  mappers.py  prepare.py  wrappers.py
perbert/models/: __init__.py  init.py  length_schedule.py  length_schedulers.py  models.py
scripts/: 1025-mine.sh  1025-mlm.sh  1027-1-mine.sh  1027-1-mlm.sh  1027-2-mine.sh  1027-2-mlm.sh  1027-mlm.sh  cache-dataset.sh  mix.sh  mlm.sh  mnli.sh  once.sh  qnli.sh  qqp.sh  rec.sh  rte.sh  sst2.sh  stsb.sh  train.sh
src/perbert/: trainer.py
src/perbert/data/: datamodules.py
src/perbert/data/datasets/: __init__.py  mappers.py  prepare.py
src/perbert/models/: __init__.py  length_schedulers.py  models.py
