[tool.poetry]
name = "perbert"
version = "0.1.0"
description = "Just my experiments on BERT related stuff."
authors = ["RenChu Wang <patrick1031wang@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
aim = "^3.10.3"
datasets = "^2.0.0"
hydra-core = "^1.1.1"
lightning = "^1.9.4"
loguru = "^0.6.0"
numpy = "^1.24.0"
omegaconf = "^2.1.1"
python = ">=3.10,<3.11"
pytorch-lightning = "^1.9.4"
rich = "^12.0.0"
scipy = "^1.8.0"
tensorflow = "^2.11.0"
tensorboard = "^2.11.0"
tensorboard-plugin-profile = "^2.5.0"
torch = "^1.11.0"
torch-tb-profiler = "^0.4.0"
transformers = "^4.17.0"
typing-extensions = "^4.1.1"
wandb = "^0.12.11"

[tool.poetry.group.dev.dependencies]
accelerate = "^0.6.1"
autoflake = "^1.4"
black = "^22.3.0"
ipython = "^8.1.1"
isort = "^5.10.1"
mypy = "^0.941"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["perbert"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
]

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.9"
pythonPlatform = "Linux"
