[project]
name = "perbert"
version = "0.1.0"
description = "Just my experiments on BERT related stuff."
authors = [
    {name = "RenChu Wang", email = "patrick1031wang@gmail.com"},
]
requires-python = ">=3.10,<3.11"
license = "MIT"
dependencies = [
    "aim>=3.10.3",
    "datasets>=2.0.0",
    "hydra-core>=1.1.1",
    "lightning>=1.9.4",
    "loguru>=0.6.0",
    "numpy>=1.24.0",
    "omegaconf>=2.1.1",
    "pytorch-lightning==1.9",
    "rich>=12.0.0",
    "scipy>=1.8.0",
    "tensorboard>=2.11.0",
    "tensorboard-plugin-profile>=2.5.0",
    "torch>=2.0.0",
    "torch-tb-profiler>=0.4.0",
    "transformers>=4.30.0",
    "typing-extensions>=4.1.1",
    "wandb>=0.12.11",
]

[tool.pdm.dev.dependencies]
"accelerate" = "^0.6.1"
"autoflake" = "^1.4"
"black" = "^22.3.0"
"ipython" = "^8.1.1"
"isort" = "^5.10.1"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
